--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                             <b>extras</b>
                             <skill>Tailwind CSS</skill>
                             <skill>Mongo DB</skill>
+                            <skill>Python</skill>
                             <skill>Photoshop</skill>
                             <skill>Video Editing</skill>
                         </div>
