--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <meta name="google-site-verification" content="nAau3cRiJFyZOVnKr4jlBCKW0xff6ORAgxYZjYQHVgI" />
     <link rel="stylesheet" href="style.css">
     <title>Aayaan Kumar</title>
 </head>
