--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
 
                     <div class="worksCon">
 
+                        <a href="https://saakuragg.vercel.app" target="_blank" class="work" id="box">
+                            <img src="./assets/saakura-img.jpg">
+                            <b>Saakura - A Discord AI Bot</b>
+                            <div class="des">HTML/CSS</div>
+                        </a>
+
                         <a href="https://kymenchat.vercel.app" target="_blank" class="work" id="box">
                             <img src="./assets/kymenchat.png">
                             <b>Kymenchat - AI Chatbot</b>
                             <div class="des">ReactJS - Google Gemini API</div>
-                        </a>
-
-                        <a href="https://getpostgp.netlify.app/" target="_blank" class="work" id="box">
-                            <img src="./assets/getpost.png">
-                            <b>GetPost - Image Sharing WebApp</b>
-                            <div class="des">ReactJS - Sanity - Google OAuth</div>
                         </a>
 
                         <a href="https://androidclicker.vercel.app" target="_blank" class="work" id="box">
