--- a/index.html
+++ b/index.html
@@ -124,30 +124,29 @@
 
                     <div class="worksCon">
 
+                        <a href="https://wallpapers-empire.vercel.app/" target="_blank" class="work" id="box">
+                            <img src="./assets/wallpapers-empire.jpg">
+                            <b>WallpapersEmpire - Best Curated Wallpapers for You</b>
+                            <div class="des">NextJS - Pexels API - TailwindCSS</div>
+                        </a>
+                        
                         <a href="https://saakuragg.vercel.app" target="_blank" class="work" id="box">
                             <img src="./assets/saakura-img.jpg">
                             <b>Saakura - A Discord AI Bot</b>
-                            <div class="des">HTML/CSS</div>
+                            <div class="des">ReactJS - TailwindCSS</div>
                         </a>
 
                         <a href="https://kymenchat.vercel.app" target="_blank" class="work" id="box">
                             <img src="./assets/kymenchat.png">
-                            <b>Kymenchat - AI Chatbot</b>
+                            <b>Kymenchat - AI Chatbot (Now discontinued)</b>
                             <div class="des">ReactJS - Google Gemini API</div>
                         </a>
 
                         <a href="https://androidclicker.vercel.app" target="_blank" class="work" id="box">
                             <img src="./assets/aclick.png">
                             <b>Android Clicker</b>
-                            <div class="des">A Simple and Minimal HTML CSS JS Clicker Game</div>
+                            <div class="des">HTML/CSS - JS</div>
                         </a>
-
-                        <a href="https://bekoder.vercel.app" target="_blank" class="work" id="box">
-                            <img src="./assets/bekoder.png">
-                            <b>Bekoder - Code Sharing WebApp UI</b>
-                            <div class="des">Tailwind CSS - Tailblocks - HTML CSS</div>
-                        </a>
-
 
                     </div>
 
