--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="worksCon">
 
                         <a href="https://wallpapers-empire.vercel.app/" target="_blank" class="work" id="box">
-                            <img src="./assets/wallpapers-empire.jpg">
+                            <img src="./assets/wallpapers-empire.png">
                             <b>WallpapersEmpire - Best Curated Wallpapers for You</b>
                             <div class="des">NextJS - Pexels API - TailwindCSS</div>
                         </a>
