--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <meta name="google-site-verification" content="nAau3cRiJFyZOVnKr4jlBCKW0xff6ORAgxYZjYQHVgI" />
     <link rel="stylesheet" href="style.css">
     <title>Aayaan Kumar</title>
@@ -18,7 +18,7 @@
             <div class="profileBox" id="box">
 
                 <div class="header">
-                    <img src="./assets/avatar.jpeg" alt="avatar">
+                    <img src="./assets/Aayaan.png" alt="avatar">
                     <b class="greet">Hey there, I'm</b>
                     <b class="name">Aayaan Kumar</b>
                     <b class="profession">Web Developer & Designer</b>
@@ -165,3 +165,4 @@
 </body>
 
 </html>
+
