--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
                             <b>Saakura - A Discord AI Bot</b>
                             <div class="des">ReactJS - TailwindCSS</div>
                         </a>
+                        
+                        <a href="https://github.com/aayaan07/jaan" target="_blank" class="work" id="box">
+                            <img src="./assets/jaanBanner.png">
+                            <b>JAAN - A Terminal based AI Assistant</b>
+                            <div class="des">Python - Google Gemini API</div>
+                        </a>
 
                         <a href="https://kymenchat.vercel.app" target="_blank" class="work" id="box">
                             <img src="./assets/kymenchat.png">
@@ -165,4 +171,5 @@
 </body>
 
 </html>
+
 
